--- a/app/styles/sass/_config.sass
+++ b/app/styles/sass/_config.sass
@@ -47,10 +47,11 @@ $gutter: $grid-gutter-width
       font-weight: $fweight
       src: url($furl) format('woff2')
 
-@include font('roboto-oh5', normal, 400, '../fonts/roboto-regular-webfont.woff2')
-@include font('roboto-oh5', italic, 400, '../fonts/roboto-italic-webfont.woff2')
-@include font('roboto-oh5', normal, 700, '../fonts/roboto-bold-webfont.woff2')
-@include font('roboto-oh5', italic, 700, '../fonts/roboto-bolditalic-webfont.woff2')
+@include font('roboto-oh5', normal, 400, '../fonts/SFUIText-Regular.woff2')
+@include font('roboto-oh5', normal, 500, '../fonts/SFUIText-Medium.woff2')
+@include font('roboto-oh5', normal, 600, '../fonts/SFUIText-Semibold.woff2')
+@include font('roboto-oh5', normal, 700, '../fonts/SFUIText-Bold.woff2')
+@include font('roboto-oh5', normal, 300, '../fonts/SFUIText-Light.woff2')
 
 // GENERAL DOCUMENT STYLES   
 
