--- a/app/styles/sass/blocks/media.sass
+++ b/app/styles/sass/blocks/media.sass
@@ -71,6 +71,8 @@
             background-image: none
 
 @media only screen and (max-width : 1100px)
+   .js-slider-about .about-slider__arrows--left
+      left: 157px
    .about-slider__arrows--left
       position: absolute
       bottom: 22px
